Version 0.96b Wrapped test execution in an Actor